--- a/EmployeePro/View/DataForms/FRM_MachinesData.resx
+++ b/EmployeePro/View/DataForms/FRM_MachinesData.resx
@@ -118,39 +118,39 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="simpleButton4.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="sbShowAll.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAHHRFWHRUaXRsZQBDb25kaXRp
-        b25hbEZvcm1hdHRpbmc7Su/ByAAABoJJREFUWEfFl3lsVFUUxiuy76vsGhCU5T81gsYYtSQYDSAFZSkC
-        goAglBYoq1C6AUUqS1u6ThdZuoC0lKIIFGgLlCURVAQkapqISoEy7Uxna6HH85377usMJEI0wUl++c59
-        L+9+37lz35s3fkT0v+L9eeIxY34waMI8adD0EWj2L2huKK6HnxmiSXx6sX9a9plzlpwzBNJAtiIV7C4X
-        UsCuckreddokaacicccp2g6+BCcpIUsRn3mS4jLLKC6jjLZllNLmtBPn120tGsG+aFZCNI1JOnaj4vod
-        amhooHuM6D1FUfFlswZ3vSgqvuIzrr/LoGbFdTK+j18qqihq2+Eb7IsVkQDNNiQee2ByTIILMvLOGRff
-        E+rqua5n5Toj96yogGOMxyCdz0HlWB2O3TXGDRSx9TB2X0sGX4Vf8/UJxSoAjAwDgcfpeWwixxpME402
-        UQaGGRu5WS25Z8hdxzWfU6rw8Dzhmw8hQCsdoEV0/FHVJSZBp8Zk2kTX2kiUSc/hAFJ7GRiGKgDXnrvk
-        8gLXr4n92jdAJC9JUfFPYuaNhQ3KVgyl0mVDqWTpEDqxZCgdXzyEjoUMpmMLB9HRoEGyafXGteSUm2rJ
-        Rq3H2NBcM4VHLtHqzw8iQGsGG9GvZfiWb2WJdWfoSHV1j44vGkyuvzLJCf7MIOcf6YyFnNfT6Js5A8nl
-        9u3Q5a4nJwMzqJPPK1VgzlUxRQjQRgdoFfbFIVliWUaP13fGEx6e9xw5fk8h97VYcl/dRK4rG8l1OUYo
-        nNZfAvgaKcVtC3W4GK0MQi5fX4gAbc0AqzcdVAF8OoHWU9GMAWT/NY4cP0SR4/tIclyMYMKp9sJayp/4
-        DE/Oht4mhuKZUctq4lRg3qXRBQjQTgdovWrjQVl6bexkY72U+YH9qOZqLNnPf0b2c6vIdm4l2c6uINuZ
-        5ZQ7tq/ZGdAmMEzhh5Qa1wl2B8OKOZdE5vsEaLNiQyHtP3zJfOKZ8FMvb/zTtGdcX8oL6EO57/WhnDGg
-        N2Uzu0f1FiM8EaEmO0/RsoxBFArSn6clloG0KHUAhaQ8S8HJ/WhhUn8EaM/gsezXdtm6/bL8avlY0Y2B
-        uZTSGbpRNTqCsV1qNUaHNigzL74PXbtdwOQLV2/tMZm9pTcCdDADhEYVyPI7YCAmjUZqKfUy1pMNKkb1
-        lMydwhDUGGpzeLj2iMnpihja9+Mkg8kmszZJgI46QLtF4fvku8fEQDo0am8Tk1pFEv/41NSyocAhWKuh
-        dg/NZJOjP6+gnAsBQvaFsQw0gKZv7OUToH1I2F7ZHMpAq2GCADBEZ2LSCH4Bq3UANq0GXFtZp2/sSYWX
-        5lJqub+QUv4WA/WnD6N7IEAnHaDDgTdfodIJo6jk/XfpxPh36HjA21Q8ZiQdGT2CCt8YTon885q046So
-        1IYq1M/vdv7pxRiK8RQ2AYHR3SkwqjtNBpFcR/SgSQz7dmbwfuDXESb2lGiyJ68je1IU2Rj7dsX+14dJ
-        Z1YsL1Rjc4uZrsEdUY9oQlYZK9c16jio4horOyt0JwJ0MQMUsIk9IZKqo0KYYIOFVB25kPJfe7nRVMyU
-        YsLtbCKGYuIRA22YwC8hVTXqmMJFt6vdsllnLt6BAF11gE4wsW0JE8PqCCY8SLCGBdFXr74kE1oNEzEw
-        gInuDGNtBI3PLKUqNoTpbRw3auyXjxZlIUA3HaAzTGpiV5LVMLWuXcDMJ+uaBbR3+AuGQWOHyqjRRI9v
-        V7O5GLkonl+/xNyKzl10C3CNTTo9ONMnQBeY7B3GDH+R9rBqcg1N4Pe5BDbDpI2UNeoD5wzSFXHGOI7r
-        PUUXaWpQBgI8xeC1zK/rjJAdsjn08mHJ9LLhQunEB9UVJpTOjO603mTiMkpEgZy7wzWD/TNlfjoCdNcB
-        uk0PzpL7WowNEz0xOhBDTHKfkQRgNU1Qw8g4d9PqlHHlHVY+VsljBAicb0GAHjpA12lBmbI5MIHu7n4T
-        mdwLfU6PKw0VQ5yzlIhxpQRQISqreAV4006el+YToNOUTy03Tn9XoZ5kuNW8FN+ZeRy3oNyG6n7PO3BR
-        JlR4neex9zncPUrddPL8bzRhdlIlGmdkE7YeOW5V4MQ5ybcmzU0l4RNNislEMOdBJpiaLPWE2az/wAcf
-        J97yHx06lX3NNyI8j/F+hicTNgaWBvR8BHo9hN73gWtw++FlBN3LHxP93xAH8J08jBb/AT0HOoevBMBH
-        Dx4n/Pec/P4GVYtLtnrS/QQAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAcdEVYdFRpdGxlAENvbmRpdGlvbmFsRm9ybWF0dGlu
+        ZztK78HIAAAGgklEQVRYR8WXeWxUVRTGK7Lvq+waEJTlPzWCxhi1JBgNIAVlKQKCgCCUFiirULoBRSpL
+        W7pOF1m6gLSUoggUaAuUJRFUBCRqmohKgTLtTGdrocfznfvu6wwkQjTBSX75zn0v737fuXPfmzd+RPS/
+        4v154jFjfjBowjxp0PQRaPYvaG4oroefGaJJfHqxf1r2mXOWnDME0kC2IhXsLhdSwK5ySt512iRppyJx
+        xynaDr4EJykhSxGfeZLiMssoLqOMtmWU0ua0E+fXbS0awb5oVkI0jUk6dqPi+h1qaGige4zoPUVR8WWz
+        Bne9KCq+4jOuv8ugZsV1Mr6PXyqqKGrb4RvsixWRAM02JB57YHJMggsy8s4ZF98T6uq5rmflOiP3rKiA
+        Y4zHIJ3PQeVYHY7dNcYNFLH1MHZfSwZfhV/z9QnFKgCMDAOBx+l5bCLHGkwTjTZRBoYZG7lZLblnyF3H
+        NZ9TqvDwPOGbDyFAKx2gRXT8UdUlJkGnxmTaRNfaSJRJz+EAUnsZGIYqANeeu+TyAtevif3aN0AkL0lR
+        8U9i5o2FDcpWDKXSZUOpZOkQOrFkKB1fPISOhQymYwsH0dGgQbJp9ca15JSbaslGrcfY0FwzhUcu0erP
+        DyJAawYb0a9l+JZvZYl1Z+hIdXWPji8aTK6/MskJ/swg5x/pjIWc19PomzkDyeX27dDlricnAzOok88r
+        VWDOVTFFCNBGB2gV9sUhWWJZRo/Xd8YTHp73HDl+TyH3tVhyX91ErisbyXU5Riic1l8C+BopxW0LdbgY
+        rQxCLl9fiABtzQCrNx1UAXw6gdZT0YwBZP81jhw/RJHj+0hyXIxgwqn2wlrKn/gMT86G3iaG4plRy2ri
+        VGDepdEFCNBOB2i9auNBWXpt7GRjvZT5gf2o5mos2c9/RvZzq8h2biXZzq4g25nllDu2r9kZ0CYwTOGH
+        lBrXCXYHw4o5l0Tm+wRos2JDIe0/fMl84pnwUy9v/NO0Z1xfygvoQ7nv9aGcMaA3ZTO7R/UWIzwRoSY7
+        T9GyjEEUCtKfpyWWgbQodQCFpDxLwcn9aGFSfwRoz+Cx7Nd22br9svxq+VjRjYG5lNIZulE1OoKxXWo1
+        Roc2KDMvvg9du13A5AtXb+0xmb2lNwJ0MAOERhXI8jtgICaNRmop9TLWkw0qRvWUzJ3CENQYanN4uPaI
+        yemKGNr34ySDySazNkmAjjpAu0Xh++S7x8RAOjRqbxOTWkUS//jU1LKhwCFYq6F2D81kk6M/r6CcCwFC
+        9oWxDDSApm/s5ROgfUjYXtkcykCrYYIAMERnYtIIfgGrdQA2rQZcW1mnb+xJhZfmUmq5v5BS/hYD9acP
+        o3sgQCcdoMOBN1+h0gmjqOT9d+nE+HfoeMDbVDxmJB0ZPYIK3xhOifzzmrTjpKjUhirUz+92/unFGIrx
+        FDYBgdHdKTCqO00GkVxH9KBJDPt2ZvB+4NcRJvaUaLInryN7UhTZGPt2xf7Xh0lnViwvVGNzi5muwR1R
+        j2hCVhkr1zXqOKjiGis7K3QnAnQxAxSwiT0hkqqjQphgg4VUHbmQ8l97udFUzJRiwu1sIoZi4hEDbZjA
+        LyFVNeqYwkW3q92yWWcu3oEAXXWATjCxbQkTw+oIJjxIsIYF0VevviQTWg0TMTCAie4MY20Ejc8spSo2
+        hOltHDdq7JePFmUhQDcdoDNMamJXktUwta5dwMwn65oFtHf4C4ZBY4fKqNFEj29Xs7kYuSieX7/E3IrO
+        XXQLcI1NOj040ydAF5jsHcYMf5H2sGpyDU3g97kENsOkjZQ16gPnDNIVccY4jus9RRdpalAGAjzF4LXM
+        r+uMkB2yOfTyYcn0suFC6cQH1RUmlM6M7rTeZOIySkSBnLvDNYP9M2V+OgJ01wG6TQ/OkvtajA0TPTE6
+        EENMcp+RBGA1TVDDyDh30+qUceUdVj5WyWMECJxvQYAeOkDXaUGZsjkwge7ufhOZ3At9To8rDRVDnLOU
+        iHGlBFAhKqt4BXjTTp6X5hOg05RPLTdOf1ehnmS41bwU35l5HLeg3Ibqfs87cFEmVHid57H3Odw9St10
+        8vxvNGF2UiUaZ2QTth45blXgxDnJtybNTSXhE02KyUQw50EmmJos9YTZrP/ABx8n3vIfHTqVfc03IjyP
+        8X6GJxM2BpYG9HwEej2E3veBa3D74WUE3csfE/3fEAfwnTyMFv8BPQc6h68EwEcPHif895z8/gZVi0u2
+        etL9BAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="simpleButton3.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
